foundation integrated in the setup

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <link rel = "stylesheet" href = "node_modules/foundation-sites/dist/css/foundation-float.min.css">
     <title>special</title>
   </head>
   <body>
